Deserialize build request project config objects using custom json converters

--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BuildQueue.cs" />
     <Compile Include="API\BuildResult.cs" />
     <Compile Include="Builder.cs" />
+    <Compile Include="API\Bootstrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
