Separated configuration data classes from modules

--- a/SeudoBuild.Modules/SeudoBuild.Modules.FolderArchive/SeudoBuild.Modules.FolderArchive.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.FolderArchive/SeudoBuild.Modules.FolderArchive.csproj
@@ -36,7 +36,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FolderArchiveStep.cs" />
-    <Compile Include="FolderArchiveConfig.cs" />
     <Compile Include="FolderArchiveModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +50,11 @@
     <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.FolderArchive.Data\SeudoBuild.Modules.FolderArchive.Data.csproj">
+      <Project>{F7145A5A-980B-424A-8178-B0FF3988410C}</Project>
+      <Name>SeudoBuild.Modules.FolderArchive.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
