--- a/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute/SeudoBuild.Modules.SMBDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute/SeudoBuild.Modules.SMBDistribute.csproj
@@ -31,7 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SMBDistributeConfig.cs" />
     <Compile Include="SMBDistributeModule.cs" />
     <Compile Include="SMBDistributeStep.cs" />
   </ItemGroup>
@@ -44,6 +43,11 @@
     <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.SMBDistribute.Data\SeudoBuild.Modules.SMBDistribute.Data.csproj">
+      <Project>{3B3E5B4C-AB0F-48BA-B264-51E8C4E6324D}</Project>
+      <Name>SeudoBuild.Modules.SMBDistribute.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
