--- a/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.ZipArchive.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive/SeudoBuild.Modules.ZipArchive.csproj
@@ -39,7 +39,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZipArchiveStep.cs" />
-    <Compile Include="ZipArchiveConfig.cs" />
     <Compile Include="ZipArchiveModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +50,11 @@
     <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.ZipArchive.Data\SeudoBuild.Modules.ZipArchive.Data.csproj">
+      <Project>{BA8156DD-3699-4184-983C-6EE6C32E2C7C}</Project>
+      <Name>SeudoBuild.Modules.ZipArchive.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
