--- a/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Modules.FTPDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Modules.FTPDistribute.csproj
@@ -36,7 +36,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FTPDistributeStep.cs" />
-    <Compile Include="FTPDistributeConfig.cs" />
     <Compile Include="FTPDistributeModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +50,11 @@
     <ProjectReference Include="..\..\SeudoBuild.Data\SeudoBuild.Data.csproj">
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.FTPDistribute.Data\SeudoBuild.Modules.FTPDistribute.Data.csproj">
+      <Project>{720C67C1-8867-4F66-8F3A-EF6703276DB8}</Project>
+      <Name>SeudoBuild.Modules.FTPDistribute.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
