--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Modules.GitSource.csproj
@@ -48,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GitSourceConfig.cs" />
     <Compile Include="GitSourceStep.cs" />
     <Compile Include="LFSFilter.cs" />
     <Compile Include="GitSourceModule.cs" />
@@ -66,6 +65,10 @@
       <Project>{01882F9A-84F7-494D-9604-633BAA622209}</Project>
       <Name>SeudoBuild.Data</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="SeudoBuild.Modules.GitSource.Data\SeudoBuild.Modules.GitSource.Data.csproj">
+      <Project>{FB9D0644-FFDC-4C77-90BA-15EC44A333F5}</Project>
+      <Name>SeudoBuild.Modules.GitSource.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
