--- a/SeudoBuild.Modules/SeudoBuild.Modules.SteamDistribute/SeudoBuild.Modules.SteamDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SteamDistribute/SeudoBuild.Modules.SteamDistribute.csproj
@@ -35,7 +35,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SteamDistributeConfig.cs" />
     <Compile Include="SteamDistributeStep.cs" />
     <Compile Include="SteamDistributeModule.cs" />
   </ItemGroup>
@@ -51,6 +50,11 @@
     <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
       <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
       <Name>SeudoBuild.Core</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.SteamDistribute.Data\SeudoBuild.Modules.SteamDistribute.Data.csproj">
+      <Project>{24C0EB80-9E8D-4045-B7F5-13D4CC4A4C9E}</Project>
+      <Name>SeudoBuild.Modules.SteamDistribute.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
