--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Modules.UnityBuild.csproj
@@ -35,20 +35,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityExecuteMethodBuild\UnityExecuteMethodBuildConfig.cs" />
-    <Compile Include="UnityParameterizedBuild\UnityParameterizedBuildConfig.cs" />
-    <Compile Include="UnityPlatform.cs" />
-    <Compile Include="UnityStandardBuild\UnityStandardBuildConfig.cs" />
-    <Compile Include="UnityExecuteMethodBuild\UnityExecuteMethodBuildStep.cs" />
-    <Compile Include="UnityStandardBuild\UnityStandardBuildStep.cs" />
-    <Compile Include="UnityParameterizedBuild\UnityParameterizedBuildStep.cs" />
     <Compile Include="UnityBuildStep.cs" />
     <Compile Include="UnityLogParser.cs" />
     <Compile Include="UnityInstallation.cs" />
-    <Compile Include="UnityExecuteMethodBuild\UnityExecuteMethodBuildModule.cs" />
-    <Compile Include="UnityParameterizedBuild\UnityParameterizedBuildModule.cs" />
-    <Compile Include="UnityStandardBuild\UnityStandardBuildModule.cs" />
-    <Compile Include="UnityBuildConfig.cs" />
+    <Compile Include="UnityExecuteMethodBuildModule.cs" />
+    <Compile Include="UnityExecuteMethodBuildStep.cs" />
+    <Compile Include="UnityParameterizedBuildModule.cs" />
+    <Compile Include="UnityParameterizedBuildStep.cs" />
+    <Compile Include="UnityStandardBuildModule.cs" />
+    <Compile Include="UnityStandardBuildStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -64,11 +59,11 @@
       <Name>SeudoBuild.Data</Name>
       <Private>False</Private>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UnityExecuteMethodBuild\" />
-    <Folder Include="UnityParameterizedBuild\" />
-    <Folder Include="UnityStandardBuild\" />
+    <ProjectReference Include="..\SeudoBuild.Modules.UnityBuild.Data\SeudoBuild.Modules.UnityBuild.Data.csproj">
+      <Project>{3D5D25F2-9C3D-4052-9CE9-89C6F2D839AB}</Project>
+      <Name>SeudoBuild.Modules.UnityBuild.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
