--- a/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Pipeilne.Modules.FTPDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.FTPDistribute/SeudoBuild.Pipeilne.Modules.FTPDistribute.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AEBB808B-8C51-4273-AC7B-FC585D52CC49}</ProjectGuid>
+    <ProjectGuid>{12283418-7700-4402-82F0-AF8567DD80B9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.SMBDistribute</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.SMBDistribute</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>SeudoBuild.Modules.FTPDistribute</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.FTPDistribute</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\SMBDistribute</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\FTPDistribute</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,18 +21,25 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\SMBDistribute</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\FTPDistribute</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SMBDistributeModule.cs" />
-    <Compile Include="SMBDistributeStep.cs" />
+    <Compile Include="FTPDistributeStep.cs" />
+    <Compile Include="FTPDistributeModule.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
@@ -40,9 +47,18 @@
       <Name>SeudoBuild.Core</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.SMBDistribute.Data\SeudoBuild.Modules.SMBDistribute.Data.csproj">
-      <Project>{3B3E5B4C-AB0F-48BA-B264-51E8C4E6324D}</Project>
-      <Name>SeudoBuild.Modules.SMBDistribute.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.FTPDistribute.Data\SeudoBuild.Pipeline.Modules.FTPDistribute.Data.csproj">
+      <Project>{720C67C1-8867-4F66-8F3A-EF6703276DB8}</Project>
+      <Name>SeudoBuild.Pipeline.Modules.FTPDistribute.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Core.Data\SeudoBuild.Core.Data.csproj">
+      <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
+      <Name>SeudoBuild.Core.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
