--- a/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Pipeline.Modules.GitSource.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.GitSource/SeudoBuild.Pipeline.Modules.GitSource.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{98F1110E-302E-4F6E-99EE-F73118AA8D71}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>SeudoBuild.Modules.GitSource</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.GitSource</AssemblyName>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.GitSource</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="LibGit2Sharp">
       <HintPath>..\..\packages\LibGit2Sharp.0.22.0\lib\net40\LibGit2Sharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -61,9 +62,19 @@
       <Name>SeudoBuild.Core</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="SeudoBuild.Modules.GitSource.Data\SeudoBuild.Modules.GitSource.Data.csproj">
+    <ProjectReference Include="SeudoBuild.Modules.GitSource.Data\SeudoBuild.Pipeline.Modules.GitSource.Data.csproj">
       <Project>{FB9D0644-FFDC-4C77-90BA-15EC44A333F5}</Project>
-      <Name>SeudoBuild.Modules.GitSource.Data</Name>
+      <Name>SeudoBuild.Pipeline.Modules.GitSource.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Core.Data\SeudoBuild.Core.Data.csproj">
+      <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
+      <Name>SeudoBuild.Core.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
