--- a/SeudoBuild.Modules/SeudoBuild.Modules.SFTPDistribute/SeudoBuild.Pipeline.Modules.SFTPDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SFTPDistribute/SeudoBuild.Pipeline.Modules.SFTPDistribute.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{14BCE30B-B04C-4D41-8CBD-5898A5013EAA}</ProjectGuid>
+    <ProjectGuid>{6E953097-7C24-40D6-8E18-2AF54E32F512}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.FolderArchive</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.FolderArchive</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>SeudoBuild.Modules.SFTPDistribute</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.SFTPDistribute</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\FolderArchive</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\SFTPDistribute</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,13 +21,16 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\FolderArchive</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\SFTPDistribute</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Renci.SshNet">
+      <HintPath>..\..\packages\SSH.NET.2016.0.0\lib\net40\Renci.SshNet.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
@@ -35,11 +38,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FolderArchiveStep.cs" />
-    <Compile Include="FolderArchiveModule.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="SFTPDistributeModule.cs" />
+    <Compile Include="SFTPDistributeStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
@@ -47,11 +47,23 @@
       <Name>SeudoBuild.Core</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.FolderArchive.Data\SeudoBuild.Modules.FolderArchive.Data.csproj">
-      <Project>{F7145A5A-980B-424A-8178-B0FF3988410C}</Project>
-      <Name>SeudoBuild.Modules.FolderArchive.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.SFTPDistribute.Data\SeudoBuild.Pipeline.Modules.SFTPDistribute.Data.csproj">
+      <Project>{238B7129-83B4-4252-B3F7-90EEC88938A0}</Project>
+      <Name>SeudoBuild.Pipeline.Modules.SFTPDistribute.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Core.Data\SeudoBuild.Core.Data.csproj">
+      <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
+      <Name>SeudoBuild.Core.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
