--- a/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute/SeudoBuild.Pipeline.Modules.SMBDistribute.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.SMBDistribute/SeudoBuild.Pipeline.Modules.SMBDistribute.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{915EAE8E-A903-4DB6-9BE5-3BA7F684A3BE}</ProjectGuid>
+    <ProjectGuid>{AEBB808B-8C51-4273-AC7B-FC585D52CC49}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.UnityBuild</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.UnityBuild</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.SMBDistribute</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.SMBDistribute</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\UnityBuild</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\SMBDistribute</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,32 +21,18 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\UnityBuild</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\SMBDistribute</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityBuildStep.cs" />
-    <Compile Include="UnityLogParser.cs" />
-    <Compile Include="UnityInstallation.cs" />
-    <Compile Include="UnityExecuteMethodBuildModule.cs" />
-    <Compile Include="UnityExecuteMethodBuildStep.cs" />
-    <Compile Include="UnityParameterizedBuildModule.cs" />
-    <Compile Include="UnityParameterizedBuildStep.cs" />
-    <Compile Include="UnityStandardBuildModule.cs" />
-    <Compile Include="UnityStandardBuildStep.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="SMBDistributeModule.cs" />
+    <Compile Include="SMBDistributeStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
@@ -54,9 +40,18 @@
       <Name>SeudoBuild.Core</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.UnityBuild.Data\SeudoBuild.Modules.UnityBuild.Data.csproj">
-      <Project>{3D5D25F2-9C3D-4052-9CE9-89C6F2D839AB}</Project>
-      <Name>SeudoBuild.Modules.UnityBuild.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.SMBDistribute.Data\SeudoBuild.Pipeline.Modules.SMBDistribute.Data.csproj">
+      <Project>{3B3E5B4C-AB0F-48BA-B264-51E8C4E6324D}</Project>
+      <Name>SeudoBuild.Pipeline.Modules.SMBDistribute.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Core.Data\SeudoBuild.Core.Data.csproj">
+      <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
+      <Name>SeudoBuild.Core.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
