--- a/SeudoBuild.Modules/SeudoBuild.Modules.ShellBuild.Data/SeudoBuild.Pipeline.Modules.ShellBuild.Data.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ShellBuild.Data/SeudoBuild.Pipeline.Modules.ShellBuild.Data.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{12283418-7700-4402-82F0-AF8567DD80B9}</ProjectGuid>
+    <ProjectGuid>{A83AE4DF-7C67-4B2C-BB57-F66EB562ECED}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.FTPDistribute</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.FTPDistribute</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>SeudoBuild.Modules.ShellBuild.Data</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.ShellBuild.Data</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\FTPDistribute</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\ShellBuild</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,35 +21,22 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\FTPDistribute</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\ShellBuild</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FTPDistributeStep.cs" />
-    <Compile Include="FTPDistributeModule.cs" />
+    <Compile Include="ShellBuildStepConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
-      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
-      <Name>SeudoBuild.Core</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.FTPDistribute.Data\SeudoBuild.Modules.FTPDistribute.Data.csproj">
-      <Project>{720C67C1-8867-4F66-8F3A-EF6703276DB8}</Project>
-      <Name>SeudoBuild.Modules.FTPDistribute.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
