--- a/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Pipeline.Modules.UnityBuild.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.UnityBuild/SeudoBuild.Pipeline.Modules.UnityBuild.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{60677416-FC65-4780-84DC-A1B77DF2DFC1}</ProjectGuid>
+    <ProjectGuid>{915EAE8E-A903-4DB6-9BE5-3BA7F684A3BE}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.ShellBuild</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.ShellBuild</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.UnityBuild</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.UnityBuild</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\ShellBuild</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\UnityBuild</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,7 +21,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\ShellBuild</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\UnityBuild</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -35,9 +35,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShellBuildStepConfig.cs" />
-    <Compile Include="ShellBuildStep.cs" />
-    <Compile Include="ShellBuildModule.cs" />
+    <Compile Include="UnityBuildStep.cs" />
+    <Compile Include="UnityLogParser.cs" />
+    <Compile Include="UnityInstallation.cs" />
+    <Compile Include="UnityExecuteMethodBuildModule.cs" />
+    <Compile Include="UnityExecuteMethodBuildStep.cs" />
+    <Compile Include="UnityParameterizedBuildModule.cs" />
+    <Compile Include="UnityParameterizedBuildStep.cs" />
+    <Compile Include="UnityStandardBuildModule.cs" />
+    <Compile Include="UnityStandardBuildStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -48,9 +54,18 @@
       <Name>SeudoBuild.Core</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.ShellBuild.Data\SeudoBuild.Modules.ShellBuild.Data.csproj">
-      <Project>{A83AE4DF-7C67-4B2C-BB57-F66EB562ECED}</Project>
-      <Name>SeudoBuild.Modules.ShellBuild.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SeudoBuild.Modules.UnityBuild.Data\SeudoBuild.Pipeline.Modules.UnityBuild.Data.csproj">
+      <Project>{3D5D25F2-9C3D-4052-9CE9-89C6F2D839AB}</Project>
+      <Name>SeudoBuild.Pipeline.Modules.UnityBuild.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SeudoBuild.Core.Data\SeudoBuild.Core.Data.csproj">
+      <Project>{2F239808-F280-4A32-B2BB-437A61304BE1}</Project>
+      <Name>SeudoBuild.Core.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
