--- a/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive.Data/SeudoBuild.Pipeline.Modules.ZipArchive.Data.csproj
+++ b/SeudoBuild.Modules/SeudoBuild.Modules.ZipArchive.Data/SeudoBuild.Pipeline.Modules.ZipArchive.Data.csproj
@@ -3,17 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6096B113-5817-4CE8-843C-CF5CBA64D655}</ProjectGuid>
+    <ProjectGuid>{BA8156DD-3699-4184-983C-6EE6C32E2C7C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SeudoBuild.Modules.SteamDistribute</RootNamespace>
-    <AssemblyName>SeudoBuild.Modules.SteamDistribute</AssemblyName>
+    <RootNamespace>SeudoBuild.Modules.ZipArchive.Data</RootNamespace>
+    <AssemblyName>SeudoBuild.Pipeline.Modules.ZipArchive.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\Modules\SteamDistribute</OutputPath>
+    <OutputPath>..\..\bin\Debug\Modules\ZipArchive</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -21,35 +21,22 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\Modules\SteamDistribute</OutputPath>
+    <OutputPath>..\..\bin\Release\Modules\ZipArchive</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SteamDistributeStep.cs" />
-    <Compile Include="SteamDistributeModule.cs" />
+    <Compile Include="ZipArchiveConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\SeudoBuild.Core\SeudoBuild.Core.csproj">
-      <Project>{96AEC5D7-D646-4A04-8624-383CC86C047C}</Project>
-      <Name>SeudoBuild.Core</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\SeudoBuild.Modules.SteamDistribute.Data\SeudoBuild.Modules.SteamDistribute.Data.csproj">
-      <Project>{24C0EB80-9E8D-4045-B7F5-13D4CC4A4C9E}</Project>
-      <Name>SeudoBuild.Modules.SteamDistribute.Data</Name>
+    <ProjectReference Include="..\..\SeudoBuild.Pipeline.Data\SeudoBuild.Pipeline.Data.csproj">
+      <Project>{CE7E1B76-B604-455A-BA80-5CB54DAC389C}</Project>
+      <Name>SeudoBuild.Pipeline.Data</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
